@@ -15,7 +15,7 @@
     <string id="30151">Høj (1 mbit/s)</string>
     <string id="30152">Medium (500 kbit/s)</string>
     <string id="30153">Lav (250 kbit/s)</string>
-    <string id="30153">Raspberry Pi/AppleTV kompatibel</string>
+    <string id="30153">AkamaiHD-stream (Raspberry Pi/AppleTV kompatibel)</string>
 
     <string id="30201">Danmarks Radio</string>
     <string id="30202">TV2/Regionerne</string>
