@@ -15,7 +15,7 @@
     <string id="30151">High (1 mbit/s)</string>
     <string id="30152">Medium (500 kbit/s)</string>
     <string id="30153">Low (250 kibt/s)</string>
-    <string id="30154">Raspberry Pi/AppleTV compatible</string>
+    <string id="30154">AkamaiHD-stream (Raspberry Pi/AppleTV compatible)</string>
 
     <string id="30201">Danish Broadcasting Corporation</string>
     <string id="30202">TV2/Regions</string>
